Attempts to fix nwsl twitter list layout bug

--- a/app/assets/stylesheets/twitter.scss
+++ b/app/assets/stylesheets/twitter.scss
@@ -95,7 +95,7 @@ a.league-link:hover {
 }
 
 .league_menu {
-  height: 900px;
+  height: 1500px;
   margin-left: 20px;
   margin-top: 20px;
   border-radius: 6px 6px 6px 6px;
@@ -156,7 +156,7 @@ a.league-link:hover {
 }
 
 .menu-nav {
-  // border-radius: 6px 6px 6px 6px; 
+  // border-radius: 6px 6px 6px 6px;
   background: #292f33;
 }
 
@@ -167,7 +167,7 @@ a.league-link:hover {
 }
 
 .nwsl-list-container {
-  margin-left: 20px;
+  margin-left: 10px;
 }
 
 .active {
